--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -1,21 +1,34 @@
 [project]
 name = "price-trigger"
-description = ""
 authors = []
+description = ""
 telemetry = false
-cache_dir = "./.cache"
+requirements = []
+[contracts.price-oracle]
+path = "contracts/price-oracle.clar"
+depends_on = []
 
-# [contracts.counter]
-# path = "contracts/counter.clar"
+[contracts.trigger-manager]
+path = "contracts/trigger-manager.clar"
+depends_on = ["price-oracle"]
+
+[contracts.price-listener]
+path = "contracts/price-listener.clar"
+depends_on = ["price-oracle", "trigger-manager"]
+
+[contracts.trigger-execution]
+path = "contracts/trigger-execution.clar"
+depends_on = ["price-listener", "trigger-manager"]
+
+[repl]
+costs_version = 2
+parser_version = 2
 
 [repl.analysis]
 passes = ["check_checker"]
-check_checker = { trusted_sender = false, trusted_caller = false, callee_filter = false }
 
-# Check-checker settings:
-# trusted_sender: if true, inputs are trusted after tx_sender has been checked.
-# trusted_caller: if true, inputs are trusted after contract-caller has been checked.
-# callee_filter: if true, untrusted data may be passed into a private function without a
-# warning, if it gets checked inside. This check will also propagate up to the
-# caller.
-# More informations: https://www.hiro.so/blog/new-safety-checks-in-clarinet
+[repl.analysis.check_checker]
+strict = false
+trusted_sender = false
+trusted_caller = false
+callee_filter = false
